Added "Tempwear" image, implemented more options for main profile and improved control over profiles

--- a/src/main/resources/views/EditProfile.fxml
+++ b/src/main/resources/views/EditProfile.fxml
@@ -3,5 +3,5 @@
 <?import javafx.scene.layout.*?>
 
 <AnchorPane prefHeight="540.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/10.0.2-internal"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.RecommendController">
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.EditProfileController">
 </AnchorPane>
