--- a/src/main/resources/views/ChooseProfile.fxml
+++ b/src/main/resources/views/ChooseProfile.fxml
@@ -6,11 +6,11 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="540.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/10.0.2-internal"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ChooseProfileController">
-    <ImageView fitHeight="128.0" fitWidth="480.0" layoutX="240.0" pickOnBounds="true" preserveRatio="true" />
-    <Button layoutX="360.0" layoutY="270.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="260.0"
-            text="Get Recommendations" textAlignment="CENTER">
+<AnchorPane prefHeight="540.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ChooseProfileController">
+    <ImageView fitHeight="128.0" fitWidth="599.0" layoutX="240.0" pickOnBounds="true" preserveRatio="true">
+        <Image url="@../images/tempwear.png"/>
+    </ImageView>
+    <Button layoutX="360.0" layoutY="197.0" mnemonicParsing="false" onAction="#recommend" prefHeight="62.0" prefWidth="260.0" text="Get Recommendations" textAlignment="CENTER">
        <font>
            <Font size="20.0" />
        </font>
@@ -18,14 +18,29 @@
            <ColorAdjust contrast="0.05" />
        </effect>
     </Button>
-    <TextField layoutX="360.0" layoutY="220.0" prefHeight="25.0" prefWidth="260.0" promptText="Enter profile name" />
-    <Button layoutX="360.0" layoutY="365.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="260.0"
-            text="Create Profile" textAlignment="CENTER" onAction="#createProfile">
+    <TextField fx:id="profileName" layoutX="360.0" layoutY="144.0" prefHeight="25.0" prefWidth="260.0" promptText="Enter profile name" />
+    <Button layoutX="360.0" layoutY="362.0" mnemonicParsing="false" onAction="#createProfile" prefHeight="62.0" prefWidth="260.0" text="Create Profile" textAlignment="CENTER">
        <font>
            <Font size="20.0" />
        </font>
        <effect>
            <ColorAdjust contrast="0.05" />
        </effect>
+    </Button>
+    <Button layoutX="360.0" layoutY="277.0" mnemonicParsing="false" onAction="#editProfile" prefHeight="62.0" prefWidth="260.0" text="Edit Profile" textAlignment="CENTER">
+        <font>
+            <Font size="20.0" />
+        </font>
+        <effect>
+            <ColorAdjust contrast="0.05" />
+        </effect>
+    </Button>
+    <Button layoutX="360.0" layoutY="442.0" mnemonicParsing="false" onAction="#deleteProfile" prefHeight="62.0" prefWidth="260.0" text="Delete Profile" textAlignment="CENTER">
+        <font>
+            <Font size="20.0" />
+        </font>
+        <effect>
+            <ColorAdjust contrast="0.05" />
+        </effect>
     </Button>
 </AnchorPane>
